src/css/alice.css
div.window.active {
  display: block;
}

div.window {
  display: none;
}

input[type="hidden"] {
  display: none;
}

body {
  margin: 0;
  padding: 0;
}

ul#tabs {
  z-index: 20;
}

ul#tabs li:hover {
  cursor: default;
}

ul#controls {
  z-index: 30;
  background: #ddd;
}

body.blurred ul#controls {
  background: #eee;
}

ul#controls li {
  position: relative;
}

select.select_overlay {
  display: block;
  position: absolute;
  top: 0px;
  left: 0px;
  bottom: 0px;
  width: 22px;
  border: none;
  padding: 0;
  margin: 0;
  opacity: 0;
  font-size: 12px;
}

select#tab_overflow_overlay option.unread {
  font-weight: bold;
}

body {
  font-family: "Lucida Grande", Helvetica, sans-serif;
  text-rendering: optimizeLegibility;
  background: #fff;
}

a:link, a:visited, a:hover, a:active { color:#0033cc; }

a:hover {
  text-shadow: rgba( 0, 0, 0, .3 ) 0 1px 1px;
}

div.window {
  position:fixed;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 23px;
}

div.window table {
  table-layout: fixed;
  width: 100%;
  height: 100%;
  padding: 0;
}

tr.input td {
  height: 20px;
  background: #efefef;
  border-bottom: 1px solid #999;
  border-top: 1px solid #aaa;
}

body.blurred tr.input td {
  border-bottom: 1px solid #aaa;
}

tr.input form {
  display: block;
  margin: 0;
  padding: 0;
  height: auto;
  line-height: 0px;
}

tr.input div {
  padding: 0 3px;
  background: #fff;
  margin: 3px 0;
  position: relative;
}

tr.input div.editor,
tr.input textarea {
  line-height: 1.2em;
  min-height: 1.2em;
  width: 100%;
  padding: 3px 0;
  border: none;
  margin: 0;
  outline: 0 none;
  font-size: 12px;
  overflow: hidden;
  resize: none;
  font-family: "Lucida Grande", Helvetica, sans-serif;
}

div.editor {
  white-space: pre-wrap;
  -khtml-nbsp-mode: space;
}

tr.input div.editor_toolbar {
  overflow: hidden;
  position: absolute;
  right: -170px;
  padding-right: 8px;
  top: -3px;
  width: 180px;
  height: 20px;
  -webkit-border-radius: 3px 0 0 3px;
  background: url(image/formatting.png) top left no-repeat #000;
  z-index: 900;
  opacity: 0.2;
  -webkit-transition-property: right;
  -webkit-transition-duration: 0.3s;
}

tr.input div.editor_toolbar button {
  visibility: hidden;
  display: block;
  float: left;
  color: #eee;
  line-height: 10px;
  font-size: 11px;
  margin: 0;
  padding: 4px 3px 5px 3px;
  text-align: center;
  background: none;
  cursor: pointer;
  border: none;
}

tr.input div.editor_toolbar button:hover {
  color: #fff;
}

tr.input div.editor_toolbar button.selected {
  color: yellow;
}

.bold {font-weight: bold;}
.italic {font-style: italic;}
.underline {text-decoration: underline;}


tr.input div.editor_toolbar.visible {
  background-color: rgba(0,0,0,0.6);
  background-image: none;
  right: -4px;
  -webkit-transition-property: right;
  -webkit-transition-duration: 0.3s;
  
  opacity: 1;
}
tr.input div.editor_toolbar.visible button{
  visibility: visible;
}

div.editor div,
div.editor p,
div.editor h1,
div.editor h2,
div.editor h3,
div.editor h4,
div.editor h5,
div.editor span
{
  font-size: 1em !important;
  margin: 0 !important;
  padding: 0 !important;
}

div.editor img {
  display: none !important;
}

tr.input input.send {
  display: none;
}

div#tab_container {
  position: fixed;
  bottom: 0px;
  left: 0px;
  right: 0px;
  height: 23px;
  background: #ddd;
}

body.blurred div#tab_container {
  background: #eee;
}

ul#tabs {
  list-style: none;
  margin: 0;
  padding: 0;
  font-size: 11px;
  position: relative;
  float: left;
  margin-right: 62px;
  padding-left: 3px;
}

body.blurred ul#tabs li {
  background: #eee;
  color: #777;
}

ul#tabs li {
  float: left;
  margin: 0;
  margin-left: -1px;
  color: #333;
  background: #ddd;
}

body.blurred ul#tabs li:first-child div.hit_area {
  border-left: 1px solid #eee;
}

ul#tabs li:first-child div.hit_area {
  border-left: 1px solid #ddd;
}

ul#tabs li div.hit_area {
  border: 1px solid #999;
  border-bottom: none;
  border-top: none;
  float:left;
  height: 14px;
  padding: 2px 10px 8px 4px;
}

body.blurred ul#tabs li div.hit_area {
  border: 1px solid #aaa;
  border-bottom: none;
  border-top: none;
}
body.blurred ul#tabs li.active div.hit_area {
  border: 1px solid #aaa;
  border-top: none;
}

ul#tabs li.active div.hit_area {
  border: 1px solid #999;
  border-top: none;
  background: #efefef;
  height: 11px;
  padding-top: 3px;
  margin-top: -1px;
}

ul#tabs li.active {
  height: 23px;
  z-index: 21;
}

ul#tabs li.active:hover div.hit_area {
  background: #efefef;
}

ul#tabs li:hover div.hit_area {
  background: #ccc;
}

ul#controls {
  position: fixed;
  bottom: 0px;
  right: 0px;
  height: 23px;
  margin: 0;
  padding: 0 18px 0 0;
  list-style: none;
}

ul#controls li {
  float: right;
  margin: 0;
  padding: 0;
  height: 16px;
  width: 16px;
  padding: 4px 3px 3px 3px;
  cursor: pointer;
}

ul#controls li:hover {
  background: #ccc;
}

tr.topic td {
  width: 100%;
  background: #efefef;
  font-size: 11px;
  text-align: center;
  border-top: 1px solid #fff;
  border-bottom: 1px solid #aaa;
  padding: 1px 0;
  height: 1.2em;
}

tr.topic td div.topic {
  height: 1.2em;
  overflow: hidden;
}

tr.topic a {
  text-decoration: none;
}

div.message_wrap {
  height: 100%;
  overflow-x: none;
  overflow-y: auto;
  background: #fff;
}

ul.messages {
  list-style: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
  background: url(image/background.png) top left repeat-y;
  margin: 3px 0;
}

ul.messages li {
  font-size: 13px;
  display: block;
  position: relative;
}

ul.messages li:not(.consecutive) {
  clear: both;
}

ul.messages li.highlight {
  border-right: 5px solid #eb2222;
}

.info ul.messages li.highlight,
ul.messages li.self {
  background: url(image/background-self.png) top left repeat-y #fffbd0;
  border-right: none;
}

.info ul.messages li.highlight div.msg,
ul.messages li.self div.msg {
  background: none;
}

ul.messages li.consecutive div.left {
  display: none;
}
/* ... */

